#
# This file is part of InSys SDK
#
# Copyright (c) 1989-2021 Instrumental Systems, JSC (devlab@insys.ru)
#

cmake_minimum_required(VERSION 3.19)

option(APPS_ALL "Building ALL applications." OFF)
option(APPS_ISAGENT "Building IsAgent application." OFF)
option(APPS_HWMON "Building HWMON application for host and target." OFF)
option(APPS_BRD_TEST "Building BRD TEST application." OFF)
option(APPS_ICR_REPAIR "Building ICR_REPAIR application." ON)
option(APPS_FPGA_LOAD "Building FPGA_LOAD application." OFF)

if(APPS_ISAGENT OR APPS_HWMON OR APPS_BRD_TEST OR APPS_ICR_REPAIR OR APPS_FPGA_LOAD)
    set(APPS_ALL OFF)
elseif(BUILD_ALL OR APPS_ALL)
    set(APPS_ISAGENT ON)
    set(APPS_HWMON ON)
    set(APPS_BRD_TEST ON)
    set(APPS_ICR_REPAIR ON)
    set(APPS_FPGA_LOAD ON)
endif()
if(APPS_HWMON)
    add_git_submodule(hwmon)
    add_subdirectory(hwmon)
endif(APPS_HWMON)
if(APPS_ISAGENT)
    add_git_submodule(isagent)
    add_subdirectory(isagent)
endif(APPS_ISAGENT)
if(APPS_BRD_TEST)
    add_git_submodule(brd_test)
    add_subdirectory(brd_test)
endif(APPS_BRD_TEST)
if(APPS_ICR_REPAIR)
    add_git_submodule(icr-repair)
    add_subdirectory(icr-repair)
endif(APPS_ICR_REPAIR)
if(APPS_FPGA_LOAD)
    add_git_submodule(fpga-load)
    add_subdirectory(fpga-load)
endif(APPS_FPGA_LOAD)
