#
# This file is part of InSys SDK
#
# Copyright (c) 1989-2021 Instrumental Systems, JSC (devlab@insys.ru)
#

cmake_minimum_required(VERSION 3.19)

option(BASE_ALL "Building ALL basedrivers." OFF)
option(BASE_ZYNQ "Building BASE_ZYNQ basedriver." OFF)
option(BASE_AXIZYNQ "Building BASE_AXIZYNQ basedriver." OFF)
option(BASE_6678PEX "Building BASE_6678PEX basedriver." OFF)
option(BASE_AMBPEX "Building BASE_AMBPEX basedriver." OFF)
option(BASE_AMBP "Building BASE_AMBP basedriver." OFF)
option(BASE_AMBPUSB "Building BASE_AMBPUSB basedriver." OFF)
option(BASE_UNI "Building BASE_UNI basedriver." OFF)

if(BASE_ZYNQ OR BASE_AXIZYNQ OR BASE_6678PEX OR BASE_AMBPEX OR EXAM_DBASE_AMBPIO32 OR BASE_AMBPUSB OR BASE_UNI)
    set(BASE_ALL OFF)
elseif(BUILD_ALL OR BASE_ALL)
    set(BASE_ZYNQ ON)
    set(BASE_AXIZYNQ ON)
    set(BASE_6678PEX ON)
    set(BASE_AMBPEX ON)
    set(BASE_AMBP ON)
    message(WARNING  "[bambusb] Support AMBPUSB disabled")
    set(BASE_AMBPUSB OFF) # НЕ СОБИРАЕТСЯ ПОД НЕКОТОРЫЕ ПЛАТФОРМЫ ПОЭТОМ ОТКЛЮЧЕН ДО РЕШЕНИЯ!
    set(BASE_UNI OFF)
endif()

if(BASE_ZYNQ)
    add_git_submodule(bzynq)
    add_subdirectory(bzynq)
endif(BASE_ZYNQ)
if(BASE_AXIZYNQ AND UNIX)
    add_git_submodule(baxizynq)
    add_subdirectory(baxizynq)
elseif(BASE_AXIZYNQ)
    message(STATUS  "[baxizynq] Support build only under linux")
endif(BASE_AXIZYNQ AND UNIX)
if(BASE_6678PEX)
    add_git_submodule(b6678pex)
    add_subdirectory(b6678pex)
endif(BASE_6678PEX)
if(BASE_AMBPEX)
    add_git_submodule(bambpex)
    add_subdirectory(bambpex)
endif(BASE_AMBPEX)
if(BASE_AMBP)
    add_git_submodule(bambp)
    add_subdirectory(bambp)
endif(BASE_AMBP)
if(BASE_AMBPUSB)
    add_git_submodule(bambusb)
    add_subdirectory(bambusb)
endif(BASE_AMBPUSB)
if(BASE_UNI)
    add_git_submodule(buni)
    add_subdirectory(buni)
endif(BASE_UNI)
