#
# This file is part of InSys SDK
#
# Copyright (c) 1989-2021 Instrumental Systems, JSC (devlab@insys.ru)
#

cmake_minimum_required(VERSION 3.19)

option(EXAM_ALL "Building ALL examples." OFF)
option(EXAM_ADC "Building ADC example." ON)
option(EXAM_EDAC "Building EDAC example." ON)
option(EXAM_SPDDEV "Building SPDDEV example." OFF)
option(EXAM_DIO32 "Building DIO32 example." OFF)
option(EXAM_MULTIADC "Building MULTIADC example." ON)
option(EXAM_SYNC "Building SYNC example." OFF)
option(EXAM_LMFC_ADC "Building LMFC_ADC example." ON)
option(EXAM_LMFC_DAC "Building LMFC_DAC example." ON)
option(EXAM_DLDS "Building DLDS example." OFF)
option(EXAM_FMC143V_SYNC "Building FMC143V_SYNC example." OFF)
option(EXAM_FMC146V_SYNC "Building FMC146V_SYNC example." ON)
option(EXAM_RADCONT "Building RADCONT example." OFF)
option(EXAM_ITER "Building ITER example." OFF)
option(EXAM_LOOPBACK "Building LOOPBACK example." OFF)
option(EXAM_PIO "Building PIO example." ON)
option(EXAM_FDDS "Building FDDS example." OFF)
option(EXAM_FM415S "Building FM415S example." ON)

if(EXAM_ADC OR EXAM_EDAC OR EXAM_SDPDEV OR EXAM_DIO32 OR EXAM_MULTIADC OR
    EXAM_SYNC OR EXAM_LMFC_ADC OR EXAM_LMFC_DAC OR EXAM_DLDS OR EXAM_FMC143V_SYNC OR
    EXAM_FMC146V_SYNC OR EXAM_RADCONT OR EXAM_ITER OR EXAM_LOOPBACK OR EXAM_PIO OR EXAM_FM415S OR
    EXAM_FDDS)
    set(EXAM_ALL OFF)
elseif(BUILD_ALL OR EXAM_ALL)
    set(EXAM_ADC ON)
    set(EXAM_EDAC ON)
    set(EXAM_SPDDEV ON)
    set(EXAM_DIO32 ON)
    set(EXAM_MULTIADC ON)
    set(EXAM_SYNC ON)
    set(EXAM_LMFC_ADC ON)
    set(EXAM_LMFC_DAC ON)
    set(EXAM_DLDS ON)
    set(EXAM_FMC143V_SYNC ON)
    set(EXAM_FMC146V_SYNC ON)
    set(EXAM_RADCONT ON)
    set(EXAM_ITER ON)
    set(EXAM_LOOPBACK ON)
    set(EXAM_PIO ON)
    set(EXAM_FDDS ON)
    set(EXAM_FM415S ON)
endif()

if(EXAM_ADC)
    add_subdirectory(exam-adc)
    add_subdirectory(ex_adc_f)
endif(EXAM_ADC)
if(EXAM_EDAC)
    add_subdirectory(exam-edac)
endif(EXAM_EDAC)
if(EXAM_LMFC_ADC)
    add_subdirectory(lmfc-adc)
endif(EXAM_LMFC_ADC)
if(EXAM_LMFC_DAC)
    add_subdirectory(lmfc-dac)
endif(EXAM_LMFC_DAC)
if(EXAM_FMC146V_SYNC)
    add_subdirectory(exam-fmc146v-sync)
endif(EXAM_FMC146V_SYNC)
if(EXAM_FM415S)
    add_subdirectory(exam-fm415s)
endif(EXAM_FM415S)
if(EXAM_PIO)
    add_subdirectory(exam-pio)
endif(EXAM_PIO)
