#
# This file is part of InSys SDK
#
# Copyright (c) 1989-2021 Instrumental Systems, JSC (devlab@insys.ru)
#

cmake_minimum_required(VERSION 3.19)

option(SIDE_ALL "Building ALL sidedrivers." OFF)
option(SIDE_DEVREG "Building DEVREG sidedriver." ON)
option(SIDE_BASE2FMC "Building BASE2FMC sidedriver." ON)
option(SIDE_DIO32 "Building DIO32 sidedriver." OFF)
option(SIDE_FM816X250M1 "Building FM816X250M1 sidedriver." OFF)
option(SIDE_FM816X250M "Building FM816X250M sidedriver." OFF)
option(SIDE_FM814X250M "Building FM814X250M sidedriver." OFF)
option(SIDE_FM1620X1M "Building FM1620X1M sidedriver." OFF)
option(SIDE_FM416X500MD "Building FM416X500MD sidedriver." OFF)
option(SIDE_FM416X1G5D "Building FM416X1G5D sidedriver." OFF)
option(SIDE_FM214X3GDA "Building FM214X3GDA sidedriver." ON)
option(SIDE_FM212X4GDA "Building FM212X4GDA sidedriver." OFF)
option(SIDE_FM414X3G "Building FM414X3G sidedriver." ON)
option(SIDE_FM410S "Building FM410S sidedriver." OFF)
option(SIDE_FM216X250MDA "Building FM216X250MDA sidedriver." OFF)
option(SIDE_FM9009 "Building FM9009 sidedriver." OFF)
option(SIDE_FM9371 "Building FM9371 sidedriver." OFF)
option(SIDE_FM214X1GTRF "Building FM214X1GTRF sidedriver." OFF)
option(SIDE_FM112x2G6DA "Building FM112x2G6DA sidedriver." OFF)
option(SIDE_FM412X500M "Building FM412X500M sidedriver." OFF)
option(SIDE_FM401S "Building FM401S sidedriver." OFF)
option(SIDE_FM814X600M "Building FM814X600M sidedriver." OFF)
option(SIDE_FM402S "Building FM402S sidedriver." OFF)
option(SIDE_FM416X100M "Building FM416X100M sidedriver." OFF)
option(SIDE_FM216X100MRF "Building FM216X100MRF sidedriver." OFF)
option(SIDE_FM415S "Building FM415S sidedriver." ON)
option(SIDE_ADC "Building ADC sidedriver." OFF)

if(SIDE_DEVREG OR SIDE_BASE2FMC OR SIDE_DIO32 OR SIDE_FM816X250M1 OR
    SIDE_FM816X250M OR SIDE_FM814X250M OR SIDE_FM1620X1M OR SIDE_FM416X500MD OR
    SIDE_FM214X3GDA OR SIDE_FM414X3G OR SIDE_FM401S OR SIDE_FM410S OR SIDE_FM212X4GDA OR SIDE_FM216X250MDA OR
    SIDE_FM9009 OR SIDE_FM9371 OR SIDE_FM214X1GTRF OR SIDE_FM412X500M OR
    SIDE_FM814X600M OR SIDE_FM402S OR SIDE_FM416X100M OR SIDE_FM216X100MRF OR SIDE_FM415S OR
    SIDE_FM112x2G6DA OR SIDE_ADC OR SIDE_FM416X1G5D)
    set(SIDE_ALL OFF)
elseif(BUILD_ALL OR SIDE_ALL)
    set(SIDE_DEVREG ON)
    set(SIDE_BASE2FMC ON)
    set(SIDE_DIO32 ON)
    set(SIDE_FM816X250M1 ON)
    set(SIDE_FM816X250M ON)
    set(SIDE_FM814X250M ON)
    set(SIDE_FM1620X1M ON)
    set(SIDE_FM416X500MD ON)
    set(SIDE_FM416X1G5D ON)
    set(SIDE_FM214X3GDA ON)
	set(SIDE_FM212X4GDA ON)
    set(SIDE_FM414X3G ON)
    set(SIDE_FM410S ON)
    set(SIDE_FM216X250MDA ON)
    set(SIDE_FM9009 OFF)
    set(SIDE_FM9371 ON)
    set(SIDE_FM214X1GTRF ON)
    set(SIDE_FM412X500M ON)
    set(SIDE_FM814X600M ON)
    set(SIDE_FM401S ON)
    set(SIDE_FM402S ON)
    set(SIDE_FM415S ON)
    set(SIDE_FM416X100M ON)
    set(SIDE_FM216X100MRF ON)
    set(SIDE_FM112x2G6DA ON)
    set(SIDE_ADC ON)
endif()

if(SIDE_DEVREG)
    add_git_submodule(devreg)
    add_subdirectory(devreg)
endif(SIDE_DEVREG)
if(SIDE_BASE2FMC)
    add_git_submodule(base2fmc)
    add_subdirectory(base2fmc)
endif(SIDE_BASE2FMC)
if(SIDE_FM214X3GDA)
    add_git_submodule(mfm214x3gda)
    add_subdirectory(mfm214x3gda)
endif(SIDE_FM214X3GDA)
if(SIDE_FM414X3G)
    add_git_submodule(mfm414x3g)
    add_subdirectory(mfm414x3g)
endif(SIDE_FM414X3G)
if(SIDE_FM415S)
    add_subdirectory(mfm415s)
endif(SIDE_FM415S)
