#
# This file is part of InSys SDK
#
# Copyright (c) 1989-2021 Instrumental Systems, JSC (devlab@insys.ru)
#

cmake_minimum_required(VERSION 3.19)

#add_subdirectory(info)
#add_subdirectory(isu)
#add_subdirectory(isu2)
add_subdirectory(regio)
add_subdirectory(reg2)
add_subdirectory(qw)
add_subdirectory(ex-dac-sf)
